# prizepool-service

./: .env  Cargo.toml  README.md
migrations/20260328_initial_setup/: down.sql  up.sql
src/: schema.rs
