[package]
name = "prizepool-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
diesel = { version = "2.3.7", features = ["postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
chrono = { version = "0.4.44", features = ["serde"] }
dotenv = { version = "0.15.0", features = ["clap"] }
clap = { version = "4.0.32", features = ["derive"] }
